--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Projetos</title>
 </head>
 <body>
-    <h1><a href="../Projetos/tcag.github.io/pm-proj004/">Projetos</a></h1>
+    <h1><a href="/pm-proj004/index.html">Projetos</a></h1>
 </body>
 </html>
