--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
-<html lang="pt-br">
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Projetos</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
 </head>
 <body>
-    <h1><a href="/pm-proj004/">Projetos</a></h1>
+        <h1><a href="/pm-proj004/">Projetos</a></h1>
+    
 </body>
 </html>
